@@ -6,10 +6,12 @@ module Daru
 
       def each(&block)
         @data.each(&block)
+        self
       end
 
       def map!(&block)
         @data.map!(&block)
+        self
       end
 
       attr_accessor :size
