@@ -18,6 +18,7 @@
         - Ported many Statsample::Vector stat methods to Daru::Vector. These are: #percentile, #factors, etc.
         - Added .new_with_size for creating vectors by specifying a size for the
         vector and a block for generating values.
+        - Added Vector#verify, #recode! and #recode.
     - DataFrame
         - #dup_only_valid
         - #clone
